--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"  
+    "react-dom": "^18.2.0",
+     "uuid": "^9.0.1"
   },
   "devDependencies": {
     "compression-webpack-plugin": "^10.0.0",
